<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/dashboardFragment">

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.oscardm22.estuguia.presentation.features.main.ui.fragments.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/scheduleFragment"
        android:name="com.oscardm22.estuguia.presentation.features.main.ui.fragments.ScheduleFragment"
        android:label="@string/title_schedule"
        tools:layout="@layout/fragment_schedule" />

    <fragment
        android:id="@+id/tasksFragment"
        android:name="com.oscardm22.estuguia.presentation.features.main.ui.fragments.TasksFragment"
        android:label="@string/title_tasks"
        tools:layout="@layout/fragment_tasks" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.oscardm22.estuguia.presentation.features.main.ui.fragments.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>