<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.chip.ChipGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:singleSelection="true"
        app:selectionRequired="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipLow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/low"
            app:chipBackgroundColor="@color/priority_low_selector"
            app:chipStrokeColor="@color/priority_low"
            app:chipStrokeWidth="1dp"
            app:checkedIconVisible="false" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium"
            app:chipBackgroundColor="@color/priority_medium_selector"
            app:chipStrokeColor="@color/priority_medium"
            app:chipStrokeWidth="1dp"
            app:checkedIconVisible="false" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipHigh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high"
            app:chipBackgroundColor="@color/priority_high_selector"
            app:chipStrokeColor="@color/priority_high"
            app:chipStrokeWidth="1dp"
            app:checkedIconVisible="false" />

    </com.google.android.material.chip.ChipGroup>

</LinearLayout>